# densoscan

./: .gitignore  CMakeLists.txt  README.md  densoscan.cpp  densoscan.h  densoscan.pro  densoscan.qrc  densoscan.ui  frame.cpp  frame.h  options.cpp  options.h  options.ui  scanner.cpp  scanner.cpp.orig  scanner.h
icon/: icon.icns  icon.sh
src/: densoscan.cpp  densoscan.h  densoscan.qrc  densoscan.ui  densoscan_wx.cpp  densoscan_wx.h  main.cpp  options.cpp  options.h  options.ui  scanner.cpp
